@@ -9,7 +9,7 @@ function refreshTracks(force){
     if(selectedStorm) selectedStorm.renderTrack();
     else if(trackMode===2){
         for(let s of basin.fetchSeason(viewTick,true).forSystems()) if(s.TC) s.renderTrack();
-    }else if(viewingPresent()) for(let s of basin.activeSystems) s.storm.renderTrack();
+    }else if(viewingPresent()) for(let s of basin.activeSystems) s.fetchStorm().renderTrack();
     else for(let s of basin.fetchSeason(viewTick,true).forSystems()) s.renderTrack();
 }
 
